--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -5,10 +5,16 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(C:\Users\HOME\Desktop\HAU\HAU\tongol-albert-full_responsive_multi_page_website_design\images\banner.png);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/banner.png);
     background-position: center;
     background-size: cover;
     position: relative;
+    }
+    nav{
+        display: flex;
+        padding: 2% 6%;
+        justify-content: space-between;
+        align-items:center;
     }
     
     
