--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -5,7 +5,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/banner.png);
+    background-image: url("images/banner.png");
     background-position: center;
     background-size: cover;
     position: relative;
@@ -16,6 +16,22 @@
         justify-content: space-between;
         align-items:center;
     }
-    
-    
+    nav img{
+        width: 150px;
+    }
+    .nav-links{
+        flex: 1;
+        text-align:right;
+    }
+    .nav-links ul li{
+        list-style: none;
+        display:inline-block;
+        padding: 8px 12px;
+        position: relative;
+    }
+    .nav-links ul li a{
+        color: #fff;
+        text-decoration: none;
+        font-size: 17px;
+    }
     
