--- a/bondoc-jd-inventory/InventorySystem/css/employee2.css
+++ b/bondoc-jd-inventory/InventorySystem/css/employee2.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: Rivera;
-    src: url(./Nunito-VariableFont_wght.ttf);
+    src: url(http://localhost/InventorySystem/fonts/Nunito-VariableFont_wght.ttf);
 }
 
 
@@ -13,7 +13,7 @@ html, body{
 }
 
 body{
-    background-image: url(http://localhost/Code/images/bg-homepage.png);
+    background-image: url(http://localhost/InventorySystem/images/bg-homepage.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
