--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0; 
     padding: 0;
+    font-family: 'Merriweather', serif;
 }
 .header{
     min-height: 100vh;
@@ -25,7 +26,7 @@
     }
     .nav-links ul li{
         list-style: none;
-        display:inline-block;
+        display: inline-block;
         padding: 8px 12px;
         position: relative;
     }
@@ -34,4 +35,15 @@
         text-decoration: none;
         font-size: 17px;
     }
-    
+    .nav-links ul li::after{
+        content: '';
+        width: 0%;
+        height: 2px;
+        background: #ad281e;
+        display: block;
+        margin: auto;
+        transition: 1s;
+    }
+    .nav-links ul li:hover::after{
+        width: 100%;
+    }
