--- a/bondoc-jd-inventory/InventorySystem/css/adminpagetable.css
+++ b/bondoc-jd-inventory/InventorySystem/css/adminpagetable.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: Rivera;
-    src: url(./fonts/Nunito-VariableFont_wght.ttf);
+    src: url(fonts/Nunito-VariableFont_wght.ttf);
 }
 
 
