--- a/santos-p-RGW2(Responsive Gaming Website)/css/style.css
+++ b/santos-p-RGW2(Responsive Gaming Website)/css/style.css
@@ -255,3 +255,42 @@ header{
     border-bottom:  4px solid #fa5353; 
     font-size: 1.8rem;  
 }
+
+/* notification */
+.notification{
+    position: absolute;
+    top: 110%;
+    right: 5rem;
+    background: #322f40;
+    width: 300px;
+    height: 350px;
+    border-radius: 0.5rem;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    clip-path: circle(0% at 100% 0%);
+    
+}
+.notification.active{
+    clip-path: circle(144% at 100% 0%);
+    transition: 0.3s;
+}
+
+.notification-box{
+    display: flex;
+    align-items: baseline;
+    column-gap: 1rem;
+    border-radius: 0.5rem;
+    background: #1b182b;
+    padding: 10px;
+}
+.notification-box .bx{
+    color: #faf102;
+}
+.box-color{
+    background: hsl(0, 0%, 100%, 0.4);
+}
+.box-color .bx{
+    color: #fa5353;
+}
