--- a/santos-p-RGW2(Responsive Gaming Website)/css/style.css
+++ b/santos-p-RGW2(Responsive Gaming Website)/css/style.css
@@ -294,3 +294,43 @@ header{
 .box-color .bx{
     color: #fa5353;
 }
+/* home */
+.home{
+    position: relative;
+    min-height: 540px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 5rem;
+}
+.home img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius:1.4rem;
+    z-index: -1;
+}
+.home-text{
+    padding-right: 4rem;
+    text-align: right;
+}
+.home-text h1{
+    font-size: 2.4rem;
+    text-transform: uppercase;
+    color: #1b182b;
+    margin-bottom: 1rem;
+}
+.btn{
+    background: #eb2222;
+    padding: 15px 20px;
+    color: #fff;
+    text-transform: 1rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    clip-path:  polygon(0 0, 100% 0%, 100% 100%, 10% 100%, 0% 68%);
+}
+.btn:hover{
+    background: #322f40;
+    transition: 0.3s all linear;
+}
