--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -6,7 +6,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: url("images/banner.png");
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url("images/banner.png");
     background-position: center;
     background-size: cover;
     position: relative;
@@ -39,11 +39,68 @@
         content: '';
         width: 0%;
         height: 2px;
-        background: #ad281e;
+        background: #8b1911;
         display: block;
         margin: auto;
         transition: 1s;
     }
     .nav-links ul li:hover::after{
         width: 100%;
+    }
+    .text-box{
+        width: 100%;
+        color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    .text-box h1{
+        font-size: 50px;
+    }
+    .text-box p{
+        margin: 10px 0 40px;
+        font-size: 25px;
+        color: #fff;
+    }
+    .hero-btn{
+        display: inline-block;
+        text-decoration: none;
+        color: #fff;
+        border: 1px solid #fff;
+        padding: 12px 34px;
+        font-size: 15px;
+        background: transparent;
+        position: relative;
+        cursor: pointer;
+    }
+    .hero-btn:hover{
+        border: 1px solid #8b1911;
+        background: #8b1911;
+        transition: 1s;
+    }
+
+    @media(max-width: 700px){
+        .text-box h1{
+            font-size: 20px;
+        }
+        .text-box p{
+            margin: 10px 0 40px;
+            font-size: 12px;
+            color: #fff;
+        }
+        .nav-links ul li{
+            display: block;
+        }
+        .nav-links{
+            position: absolute;
+            background: #530c0c;
+            height: 100vh;
+            width: 200px;
+            top: 0;
+            right: 0;
+            text-align: left;
+            z-index: 2;
+        }
     }
