--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -3,38 +3,45 @@
     padding: 0;
     font-family: 'Merriweather', serif;
 }
+
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url("images/banner.png");
+    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ),url("images/banner.png");
     background-position: center;
     background-size: cover;
     position: relative;
     }
+
     nav{
         display: flex;
         padding: 2% 6%;
         justify-content: space-between;
         align-items:center;
     }
+
     nav img{
         width: 150px;
     }
+
     .nav-links{
         flex: 1;
         text-align:right;
     }
+
     .nav-links ul li{
         list-style: none;
         display: inline-block;
         padding: 8px 12px;
         position: relative;
     }
+
     .nav-links ul li a{
         color: #fff;
         text-decoration: none;
         font-size: 17px;
     }
+
     .nav-links ul li::after{
         content: '';
         width: 0%;
@@ -44,9 +51,11 @@
         margin: auto;
         transition: 1s;
     }
+
     .nav-links ul li:hover::after{
         width: 100%;
     }
+
     .text-box{
         width: 100%;
         color: #fff;
@@ -56,14 +65,17 @@
         transform: translate(-50%, -50%);
         text-align: center;
     }
+
     .text-box h1{
-        font-size: 50px;
+        font-size: 55px;
     }
+    
     .text-box p{
         margin: 10px 0 40px;
         font-size: 25px;
         color: #fff;
     }
+
     .hero-btn{
         display: inline-block;
         text-decoration: none;
@@ -75,32 +87,55 @@
         position: relative;
         cursor: pointer;
     }
+
     .hero-btn:hover{
         border: 1px solid #8b1911;
         background: #8b1911;
         transition: 1s;
     }
 
+    nav .fa{
+        display: none;
+    }
+
     @media(max-width: 700px){
         .text-box h1{
-            font-size: 20px;
+            font-size: 30px;
         }
+
         .text-box p{
             margin: 10px 0 40px;
             font-size: 12px;
             color: #fff;
         }
+
         .nav-links ul li{
             display: block;
         }
+
         .nav-links{
             position: absolute;
             background: #530c0c;
             height: 100vh;
             width: 200px;
             top: 0;
-            right: 0;
+            right: -200px;
             text-align: left;
             z-index: 2;
+            transition: 1s;
         }
+
+        nav .fa{
+            display: block;
+            color: #fff;
+            margin: 10px;
+            font-size: 22px;
+            cursor: pointer;
+            text-align: left;
+        }
+
+        .nav-links ul{
+            padding: 10px;
+        }
+
     }
