--- a/bondoc-jd-inventory/InventorySystem/css/userStatic.css
+++ b/bondoc-jd-inventory/InventorySystem/css/userStatic.css
@@ -1,7 +1,7 @@
 
 @font-face{
   font-family: Rivera;
-  src: url(/fonts/Nunito-VariableFont_wght.ttf);
+  src: url(http://localhost/InventorySystem/fonts/Nunito-VariableFont_wght.ttf);
 }
 
 * {
