--- a/bondoc-jd-inventory/InventorySystem/css/contact.css
+++ b/bondoc-jd-inventory/InventorySystem/css/contact.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: Rivera;
-    src: url(/fonts/Nunito-VariableFont_wght.ttf);
+    src: url(http://localhost/InventorySystem/fonts/Nunito-VariableFont_wght.ttf);
 }
 
 html, body{
@@ -11,7 +11,7 @@ html, body{
 }
 
 body{
-    background-image: url(/images/bg-homepage.png);
+    background-image: url(http://localhost/InventorySystem/images/bg-homepage.png);
     background-attachment: fixed;
     background-size: cover;
     font-family: Rivera;
@@ -35,6 +35,7 @@ table, th, td {
     font-family: Rivera;
     font-size: 50px;
     color: black;
+    padding: 5pxcd HAU;
     border: 2px solid rgb(252, 174, 85);
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.473);
