--- a/bondoc-jd-inventory/InventorySystem/css/userStaticPage.css
+++ b/bondoc-jd-inventory/InventorySystem/css/userStaticPage.css
@@ -1,62 +1,31 @@
 @font-face{
     font-family: Rivera;
     src: url(http://localhost/InventorySystem/fonts/Nunito-VariableFont_wght.ttf);
-}
+  }
+  
+
+
 
 html, body{
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
 }
+
 body{
     background-image: url(http://localhost/InventorySystem/images/bg-homepage.png);
     background-attachment: fixed;
     background-size: cover;
 }
 
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgba(252, 174, 85, 0.664);
-}
-  
-li{
-    float: left;
-    border-right:1px solid #bbb;
-}
-  
-li:last-child{
-    border-right: none;
-}
-  
-li a{
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family: Rivera;
-    font-size: 25px;
-}
-  
-li a:hover:not(.active){
-    background-color: #4d3227;
-}
-  
-.active{
-    background-color: #4d3227;
-}
 
 ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgba(252, 174, 85, 0.664);
+    background-color: rgba(252, 174, 85, 0);
 }
   
 li{
@@ -70,24 +39,16 @@ li:last-child{
   
 li a{
     display: block;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-family: Rivera;
     font-size: 25px;
-}
-  
-li a:hover:not(.active){
-    background-color: #4d3227;
 }
 
 li a:hover{
     text-decoration: none;
-}
-  
-.active{
-    background-color: #4d3227;
 }
 
 div.tableContent{
@@ -120,35 +81,13 @@ h1{
 
 }
 
-div.addbtn form{
-    text-align: center;
-    
-}
-
-/**delete data ing table**/
-div.idnumdelete form{
-    text-align: center;
-}
-
-div.idnumdelete form input{
-    border: 2px solid rgb(252, 174, 85);
-    border-radius: 5px;
+.about{
     margin-top: 10px;
-    padding: 5px;
+    text-align: center;
+    font-family: Rivera;
+    background-color: #e0aa9583;
+    margin-left: 700px;
+    margin-right: 700px;
+    border-radius: 10px;
 }
 
-div.idnumdelete form input{
-    background-color: rgba(255, 255, 255, 0.226);
-    font-size: 25px;
-}
-
-div.idnumdelete form .deldat input{
-    background-color: rgb(255, 78, 78);
-    color: white;
-    
-}
-
-div.idnumdelete form .deldat input:hover{
-    background-color: rgb(136, 44, 44);
-    
-}
