--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -276,6 +276,37 @@ ul{
     }
 }
 
+/*------------ All Products ----------------*/
+.row-2{
+    justify-content: space-between;
+    margin: 100px auto 50px;
+}
+select{
+    border: 1px solid #ff523b;
+    padding: 5px;
+}
+select:focus{
+    outline: none;
+}
+.page-btn{
+    margin: 0 auto 80px;
+}
+.page-btn span{
+    display: inline-block;
+    border: 1px solid #ff523b;
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    cursor: pointer;
+}
+.page-btn span:hover{
+    background: #ff523b;
+    color: #fff;
+    
+}
+
 /*-----media query for less than 600 screen  size----*/
 @media only screen and (max-width: 600px){
     .row{
