--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -288,10 +288,10 @@ select{
 select:focus{
     outline: none;
 }
-.page-btn{
+.pgn-btn{
     margin: 0 auto 80px;
 }
-.page-btn span{
+.pgn-btn span{
     display: inline-block;
     border: 1px solid #ff523b;
     margin-left: 10px;
@@ -301,10 +301,10 @@ select:focus{
     line-height: 40px;
     cursor: pointer;
 }
-.page-btn span:hover{
+.pgn-btn span:hover{
     background: #ff523b;
     color: #fff;
-    
+
 }
 
 /*-----media query for less than 600 screen  size----*/
