--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -281,13 +281,15 @@ ul{
     justify-content: space-between;
     margin: 100px auto 50px;
 }
-select{
+.select{
     border: 1px solid #ff523b;
     padding: 5px;
 }
-select:focus{
+.select:focus{
     outline: none;
 }
+
+
 .pgn-btn{
     margin: 0 auto 80px;
 }
