--- a/bondoc-jd-inventory/InventorySystem/css/employee.css
+++ b/bondoc-jd-inventory/InventorySystem/css/employee.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: Rivera;
-    src: url(/fonts/Nunito-VariableFont_wght.ttf);
+    src: url(/InventorySystem/fonts/Nunito-VariableFont_wght.ttf);
 }
 
 
@@ -13,7 +13,7 @@ html, body{
 }
 
 body{
-    background-image: url(/images/bg-homepage.png);
+    background-image: url(/InventorySystem/images/bg-homepage.png);
     background-attachment: fixed;
     background-size: cover;
 }
