--- a/bondoc-jd-inventory/InventorySystem/css/userStatic.css
+++ b/bondoc-jd-inventory/InventorySystem/css/userStatic.css
@@ -1,7 +1,7 @@
 
 @font-face{
   font-family: Rivera;
-  src: url(/fonts/Nunito-VariableFont_wght.ttf);
+  src: url(/InventorySystem/fonts/Nunito-VariableFont_wght.ttf);
 }
 
 * {
@@ -15,7 +15,7 @@
   
   .landing {
     min-height: 100vh;
-    background: url("/images/bg-login.png");
+    background: url("/InventorySystem/images/bg-login.png");
     background-size: cover;
     padding: 0rem 5rem;
   }
