Updated some features and added product-details

--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -309,6 +309,50 @@ ul{
 
 }
 
+/*-------Single Product Details------*/
+.single-product{
+    margin-top: 80px;
+}
+.single-product .col-2 img{
+    padding: 0;
+}
+.single-product .col-2{
+    padding: 20px;
+}
+.single-product h4{
+    margin: 20px 0;
+    font-size: 22px;
+    font-weight: bold;
+}
+.single-product select{
+    display: block;
+    padding: 10px;
+    margin-top: 20px; 
+}
+.single-product input{
+    width: 50px;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 20px;
+    margin-right: 10px;
+    border: 1px solid #ff523b;
+}
+.input:focus{
+    outline: none;
+}
+.single-product .fa{
+    color:#ff523b;
+    margin-left: 10px;
+}
+.small-container-row{
+    display: flex;
+    justify-content: space-between;
+}
+.small-img-col-{
+    flex-basis: 24%;
+    cursor: pointer;
+}
+
 /*-----media query for less than 600 screen  size----*/
 @media only screen and (max-width: 600px){
     .row{
@@ -317,4 +361,15 @@ ul{
     .col-2, .col-3, .col-4{
         flex-basis: 100%;
     }
+}
+
+.single-product .row{
+    text-align: left;
+}
+.single-product .col-2{
+    padding: 20px 0;
+}
+.single-product h1{
+    font-size: 26px;
+    line-height: 32px;
 }
