--- a/santos-p-RGW2(Responsive Gaming Website)/css/style.css
+++ b/santos-p-RGW2(Responsive Gaming Website)/css/style.css
@@ -417,3 +417,113 @@ header{
 .box-btn .bx:hover{
     background: #1b182b;
 }
+/* new */
+.new-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(240px,auto));
+    gap: 1.2rem;
+}
+.next-page{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
+}
+.next-page a {
+    background: #eb2222;
+    padding: 12px 20px;
+    color:#fff;
+    initial-letter: 1px;
+    font-weight: 500;
+}
+.next-page a:hover{
+    background: #322f40;
+    transition: 0.3s all linear;
+}
+.copyright{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.copyright p{
+    font-size: 0.9rem;
+    color: #fff;
+}
+/* download page */
+.video-container video{
+    width: 100%;
+    aspect-ratio: 16/9;
+}
+.video-container{
+    margin-top: 5rem;
+}
+.about{
+    margin-top: 2rem;
+}
+.about h2{
+    display: inline-flex;
+    font-size: 1.4rem;
+    font-weight: 500;
+    border-bottom: 4px solid #eb2222;
+}
+.about p{
+    font-size: 0.98rem;
+    margin-top: 1rem;
+    text-align: justify;
+}
+.screenshots h2{
+    display: inline-flex;
+    font-size: 1.4rem;
+    font-weight: 500;
+    border-bottom: 4px solid #eb2222;
+    margin: 1.6rem 0;
+}
+.screenshots-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,auto));
+    gap: 10px;
+    justify-content: center;
+    max-width: 800px;
+    margin: auto;
+    width: 100%;
+}
+.screenshots-content img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.download{
+    max-width: 800px;
+    margin: auto;
+    width: 100%;
+    display: grid;
+    justify-content: center;
+    margin-top: 2rem;
+}
+.download h2{
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin: 1.6rem 0;
+    
+}
+.download-links{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    margin-bottom: 2rem;
+}
+.download-links a{
+    text-align: center;
+    background:#eb2222;
+    padding: 12px 20px;
+    color: #fff;
+    letter-spacing: 1px;
+    font-weight: 500;
+}
+.download-links a:hover{
+    background: #322f40;
+    transition: 0.3s all linear;
+}
+
