--- a/santos-p-RGW2(Responsive Gaming Website)/css/style.css
+++ b/santos-p-RGW2(Responsive Gaming Website)/css/style.css
@@ -450,7 +450,8 @@ header{
     font-size: 0.9rem;
     color: #fff;
 }
-/* download page */
+
+/* download page subway surfer */
 .video-container video{
     width: 100%;
     aspect-ratio: 16/9;
@@ -493,6 +494,7 @@ header{
     height: 100%;
     object-fit: cover;
 }
+
 .download{
     max-width: 800px;
     margin: auto;
@@ -501,6 +503,7 @@ header{
     justify-content: center;
     margin-top: 2rem;
 }
+
 .download h2{
     text-align: center;
     font-size: 1.4rem;
@@ -527,3 +530,33 @@ header{
     transition: 0.3s all linear;
 }
 
+/* AC DL CUSTOM */
+
+.download-linksAC a{
+    text-align: center;
+    background:#eb2222;
+    padding: 15px 30px;
+    color: #fff;
+    letter-spacing: 1px;
+    font-weight: 500;
+}
+
+
+
+/* scroll bar */
+html::-webkit-scrollbar{
+    display: none;
+}
+.progress{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    z-index: 300;
+}
+.progress-bar{
+    height: 4px;
+    background: #fa5353;
+    width: 0%;
+}
