--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -138,4 +138,171 @@
             padding: 10px;
         }
 
+        .nav-links ul li:hover::after{
+            width: 0%;
+        }
     }
+
+    /*------- course --------*/
+
+    .course{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        padding-top: 100px;
+    }
+    h1{
+        font-size: 36px;
+        font-weight: 600;
+    }
+    p{
+        color: #777;
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 22px;
+        padding: 10px;
+    }
+
+    .row{
+        margin-top: 5%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .course-col{
+        flex-basis: 31%;
+        background: #fff3f3;
+        border-radius: 10px;
+        margin-bottom: 5%;
+        padding: 20px 12px;
+        box-sizing: border-box;
+        transition: 0.5s;
+    }
+    h3{
+        text-align: center;
+        font-weight: 600;
+        margin: 10px 0;
+    }
+    .course-col:hover{
+        box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+    }
+    @media(max-width: 700px){
+        .row{
+            flex-direction: column;
+        }
+    }
+    /*-----campus-----*/
+
+    .campus{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        padding-top: 50px;
+    }
+    .campus-col{
+        flex-basis: 32%;
+        border-radius: 10px;
+        margin-bottom: 30px;
+        position: relative;
+        overflow: hidden;
+    }
+    .campus-col img{
+        width: 100%;
+        height: 100%;
+        display: block;
+    }
+    .layer{
+        background: transparent;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: 0.5s;
+    }
+    .layer:hover{
+        background:rgba(80, 0, 0, 0.6);
+    }
+    .layer h3{
+        width: 100%;
+        font-weight: 500;
+        color: #fff;
+        font-size: 26px;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        position: absolute;
+        opacity: 0;
+        transition: 00.5s ;
+    }
+    .layer:hover h3{
+        bottom: 49%;
+        opacity: 1;
+    }
+
+    /*---------facilities----------*/
+
+    .facilities{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        padding-top: 100px;
+    }
+    .facilities-col{
+        flex-basis: 31%;
+        border-radius: 10px;
+        margin-bottom: 5%;
+        text-align: left;
+    }
+    .facilities-col img{
+        width: 100%;
+        border-radius: 10px;
+    }
+    .facilities-col p{
+        padding: 0;
+    }
+    .facilities-col h3{
+        margin-top: 16px;
+        margin-bottom: 15px;
+        text-align: left;
+    }
+        
+    /*---------testimonials--------*/
+    .testimonials{
+        width:80%;
+        margin: auto;
+        padding-top: 100px;
+        text-align: center;
+    }
+    .testimonials-col{
+        flex-basis: 44%;
+        border-radius: 10px;
+        margin-bottom: 5%;
+        text-align: left;
+        background: #fff3f3;
+        padding: 25px;
+        cursor: pointer;
+        display: flex;
+    }
+    .testimonials-col img{
+        height: 40px;
+        margin-left: 5px;
+        margin-right: 30px;
+        border-radius: 50%;
+    }
+    .testimonials-col p{
+        padding: 0;
+    }
+    .testimonials-col h3{
+        margin-top: 15px;
+        text-align: left;
+    }
+    .testimonials-col.fa{
+        color: #f44336;
+    }
+    @media(max-width: 700px){
+        .testimonials-col img{
+            margin-left: 0;
+            margin-right: 15px;
+        }
+    }
+    
