--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -282,6 +282,8 @@
         padding: 25px;
         cursor: pointer;
         display: flex;
+        box-sizing: border-box;
+        transition: 0.5s;
     }
     .testimonials-col img{
         height: 40px;
@@ -299,6 +301,9 @@
     .testimonials-col.fa{
         color: #f44336;
     }
+    .testimonials-col:hover{
+        box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+    }
     @media(max-width: 700px){
         .testimonials-col img{
             margin-left: 0;
@@ -306,3 +311,48 @@
         }
     }
     
+    /*--------------call to action----------*/
+
+    .cta{
+        margin: 100px auto;
+        width: 80%;
+        background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ),url("images/banner2.jpg");
+        background-position: center;
+        background-size: cover;
+        border-radius: 10px;
+        text-align: center;
+        padding: 100px 0;
+    }
+    .cta h1{
+        color: #fff;
+        margin-bottom: 40px;
+        padding: 0;
+    }
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 24px;
+    }
+}
+
+/*---------------footer---------------*/
+
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+.icons .fa{
+    color: #c52015;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
+
+}
+.fa-heart-o{
+    color: #c52015;
+}
