--- a/santos-p-RGW2(Responsive Gaming Website)/css/style.css
+++ b/santos-p-RGW2(Responsive Gaming Website)/css/style.css
@@ -557,6 +557,137 @@ html::-webkit-scrollbar{
 }
 .progress-bar{
     height: 4px;
-    background: #fa5353;
+    background: #8465f3;
     width: 0%;
+}
+
+/* making reponsive / breakpoints */
+@media (max-width:1080px){
+    .container {
+        margin: 0 auto;
+        width: 90%;
+    }
+    .nav {
+        padding: 10px 0;
+    }
+    .notification{
+        right:4 rem;
+    } 
+    .menu img {
+        width: 500px;
+    }
+    section {
+        padding: 3rem 0 2rem;
+    }
+    .home {
+        margin-top: 4rem !important;
+        min-height: 440px;
+    }
+    .home img {
+         border-radius: 1rem;
+    }
+    .new-content {
+         grid-template-columns: repeat(auto-fit,minmax(200px,auto));
+    }
+    .video-container {
+        margin-top: 5rem !important;
+    }
+
+}
+
+/* for medium devices */
+@media (max-width:774px){
+    .notification{
+        right: 1rem;
+    }
+    .menu img {
+        width: 400px;
+    }
+    .home {
+        min-height: 300px;
+    }
+    .home-text h1{
+        font-size: 2rem;
+    }
+    .btn {
+        padding: 12px 17px;
+    }
+    .screenshots-content{
+        grid-template-columns: repeat(auto-fit, minmax(250px,300px));
+    }
+}
+@media (max-width:560px){
+    .menu img{
+        display: none;
+    }
+    .menu {
+        justify-content: flex-end;
+    }
+    .nav {
+        padding: 8px 0;
+    }
+    .nav-icons .bx,
+    .menu-icon {
+        height: 40px;
+        width: 40px;
+    }
+    .home {
+        min-height: 240px;
+    }
+    .home-text {
+        padding-right: 1rem;
+    }
+    p{
+        font-size: 0.875rem;
+    }
+    .download-links {
+        grid-template-columns: 1fr;
+    }
+    .download-linksAC {
+        grid-template-columns: 1fr;
+    }
+}
+
+/* for small devices */
+@media (max-width:360px){
+    .logo {
+        font-size: 1.2rem;
+    }
+    .navbar a {
+        font-size: 1.3rem;
+    }
+    .navbar a:hover {
+        font-size: 1.4rem;
+    }
+    .notification {
+        width: 270px;
+    }
+    .home {
+        min-height: 214px;
+    }
+    .home-text h1 {
+        font-size: 1.4rem;
+    }
+    .home-text .bx {
+        padding: 8px;
+    }
+    .home-text h2 {
+        font-size: 1.1rem;
+    }
+    .box {
+        height: 420px;
+    }
+    .copyright {
+        flex-direction:  column;
+        align-items: center;
+        row-gap: 1rem;
+    }
+    .copyright .logo {
+        margin: 0;
+    }
+    .about h2 
+    .screenshots h2 .download h2{
+        font-size: 1.2rem;
+    }
+
 }
