--- a/Project School/SchoolManagementSystem-master/src/main/resources/templates/loginPage.html
+++ b/Project School/SchoolManagementSystem-master/src/main/resources/templates/loginPage.html
@@ -34,9 +34,8 @@
                     <input type='text' name='username' value=''>
                     <h4 for="psw"><b>Password</b></h4>
                     <input type='password' name='password' />
-                    <td>Remember Me?</td>
-                    <td><input type="checkbox" name="remember-me" /></td>
-                    <button onclick="myFunction()" type="submit" class="loginbtn">Submit</button>
+                    <button onclick="" type="submit" class="loginbtn" th:href="@{/login}">Submit</button>
+                    <button onclick="" type="register" class="registerbtn" th:href="@{/register}">Register</a>
                     </hr>
                 </table>
             </form>
