--- a/tongol-albert-full_responsive_multi_page_website_design/style.css
+++ b/tongol-albert-full_responsive_multi_page_website_design/style.css
@@ -404,8 +404,33 @@
     color: #c52015;
 }
 .red-btn:hover{
-    color: #c52015;
+    color: rgb(117, 209, 209);
 }
+/*-----------History----------*/
+
+.history-content{
+    width: 80%;
+    margin: auto;
+    padding: 20px 0;
+}
+.history-left{
+    flex-basis: 65%;
+}
+.history-left img{
+    width: 100%;
+    padding-left: 12px;
+}
+.history-left h2{
+    color: #222;
+    font-weight: 600;
+    margin: 30px 0;
+    padding-left: 12px;
+}
+.history-left p{
+    text-align: justify;
+    padding-top: 0%;
+}
+
 /*-------------news-content---------------*/
 
 .news-content{
@@ -418,13 +443,70 @@
 }
 .news-left img{
     width: 100%;
+    padding-left: 12px;
 }
 .news-left h2{
     color: #222;
     font-weight: 600;
     margin: 30px 0;
+    padding-left: 12px;
+}
+.news-left h4{
+    color: #222;
+    font-weight: 600;
+    margin: 30px 0;
+    padding-left: 12px;
+}
+.news-left h6{
+    color: #222;
+    font-weight: 600;
+    margin: 30px 0;
+    padding-left: 12px;
 }
 .news-left p{
     text-align: justify;
     padding-top: 0%;
+}
+.news-right{
+    flex-basis: 32%;
+}
+.news-right h3{
+    background: #c52015;
+    color: #fff;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+.news-right div{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #555;
+    padding: 8px;
+    box-sizing: border-box;
+}
+.comment-box{
+    border: 1px solid #ccc;
+    margin: 50px 0;
+    padding: 10px 20px;
+}
+.comment-box h3{
+    text-align: left;
+}
+.comment-form input, .comment-form textarea{
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
+.comment-form button{
+    margin: 10px 0;
+}
+@media(max-width:700px){
+    .sub-header h1{
+        font-size: 24px;
+    }
 }
