--- a/santos-p-RGW2(Responsive Gaming Website)/css/login.css
+++ b/santos-p-RGW2(Responsive Gaming Website)/css/login.css
@@ -137,6 +137,27 @@ section .contentBx .formBx .sci li img{
     transform: scale(0.6);
     filter: invert(1);
 }
+
+/* scroll bar */
+html::-webkit-scrollbar{
+    display: none;
+}
+.progress{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    z-index: 300;
+}
+.progress-bar{
+    height: 4px;
+    background: #8465f3;
+    width: 0%;
+}
+
+
+
 @media (max-width: 768px) {
     section .imgBx {
         position: absolute;
