what if mislinked? 404

--- a/Memeic/client/src/index.css
+++ b/Memeic/client/src/index.css
@@ -13,7 +13,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+#theme{
+  display: none;
+  
+}
 #theme:checked~ .App{
   filter: invert(1)
   
