--- a/bondoc-jd-inventory/InventorySystem/css/tableemployee2.css
+++ b/bondoc-jd-inventory/InventorySystem/css/tableemployee2.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: Rivera;
-    src: url(/InventorySystem/fonts/Nunito-VariableFont_wght.ttf);
+    src: url(/fonts/Nunito-VariableFont_wght.ttf);
 }
 
 html, body{
@@ -11,7 +11,7 @@ html, body{
     overflow: hidden;
 }
 body{
-    background-image: url(/InventorySystem/images/bg-homepage.png);
+    background-image: url(/images/bg-homepage.png);
     background-attachment: fixed;
     background-size: cover;
 }
