--- a/Ecommerce/style1.css
+++ b/Ecommerce/style1.css
@@ -55,7 +55,7 @@ header {
 .cart{
     position: fixed;
     top: 0;
-    right: 0;
+    right: -100%;
     width: 360px;
     min-height: 100vh;
     padding: 20px;
