--- a/css/preview.css
+++ b/css/preview.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
+:root{
+  --text :#fff;
+  
+}
 *{
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   outline: none;
@@ -7,19 +12,13 @@
   font-family: 'Montserrat', sans-serif;
 }
 body{
+  width: 100%;
+  position: fixed;
+  margin: auto;
   background-color: #2a2a2a;
   justify-content: center;
-  align-items: center;    
-}
-
-body::-webkit-scrollbar{
-  width: .9rem;
-  border-radius: .4rem;
-  background-color: #fff;
-}
-body::-webkit-scrollbar-thumb{
-  border-radius: .4rem;
-  background-color: chartreuse;
+  align-items: center;
+  color: var(--text);    
 }
 
 /* Navbar */
@@ -27,7 +26,7 @@ header {
   height: 100px;
   width: 100%;
   position: fixed;
-  z-index: 12;
+  z-index: 12;  
 }
 nav{
   margin: 0%;
@@ -98,7 +97,6 @@ nav form button{
 nav form button:hover{
   background: chartreuse;
 }
-
 nav .menu-icon,
 nav .cancel-icon,
 nav .search-icon{
@@ -121,14 +119,14 @@ nav .search-icon{
   }
 }
 @media (max-width: 1140px){
-  nav{
+  nav, #content{
     padding: 0px;
   }
   nav .logo{
     flex: 2;
     text-align: center;
   }
-  nav .nav-items{
+  nav .nav-items  {
     position: fixed;
     z-index: 99;
     top: 70px;
@@ -204,6 +202,21 @@ nav .search-icon{
     display: block;
   }
 }
+.content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+
+.space{
+  margin: 10px 0;
+}
+nav .logo.space{
+  color: chartreuse;
+  padding: 0 5px 0 0;
+}
 @media (max-width: 980px){
   nav .menu-icon,
   nav .cancel-icon,
@@ -224,103 +237,90 @@ nav .search-icon{
 }
 /* Navbar ends here*/
 
-/* Login*/
-.loginform{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  background:#fff;
-  border-radius: 10px;
-  box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+/* Main content start here*/
+.container{
+  margin: 7rem 0 0 0;
+  width: 100vw;
+  
+  display: grid;
+  grid-template-columns: 1.9fr 1.2fr ;
+  gap: 1rem;
+
+  padding: .5rem 1rem;
+  text-transform: capitalize;
 }
-.loginform h1{
-  text-align: center;
-  padding: 20px 0;
-  border-bottom: 1px solid silver;
+@media screen and (max-width :990px) {
+  .container{
+    grid-template-columns: 1fr;
+  }
+
 }
-.loginform form{
-  padding: 0 40px;
-  box-sizing: border-box;
+.main-video, .video-playlist{
+  width: 100%;
+  height: 30rem;
 }
-form .txt_field{
+.main-video .title{
+  margin-top: 1rem;
+}
+.video-playlist .title{
+  padding-left: 1rem;
+}
+.video-playlist >p{
+  padding: 1rem;
+  color: chartreuse;
+}
+.video-playlist .video{
+  height: 70%;
+  overflow-y: auto;
+}
+.video-playlist .video::-webkit-scrollbar{
+  width: .4rem;
+  border-radius: .4rem;
+  background-color: #fff;
+}
+.video-playlist .video::-webkit-scrollbar-thumb{
+  border-radius: .4rem;
+  background-color: chartreuse;
+}
+.video-playlist .video .play-video,.video-playlist .video .play-videoactive {
   position: relative;
-  border-bottom: 2px solid #adadad;
-  margin: 30px 0;
-}
-.txt_field input{
   width: 100%;
-  padding: 0 5px;
-  height: 40px;
-  font-size: 16px;
-  border: none;
-  background: none;
-  outline: none;
-}
-.txt_field label{
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  color: #adadad;
-  transform: translateY(-50%);
-  font-size: 16px;
-  pointer-events: none;
-  transition: .5s;
-}
-.txt_field span::before{
-  content: '';
-  position: absolute;
-  top: 40px;
-  left: 0;
-  width: 0%;
-  height: 2px;
-  background: #2691d9;
-  transition: .5s;
-}
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
-  top: -5px;
-  color: #2691d9;
-}
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
-  width: 100%;
-}
-.pass{
-  margin: -5px 0 20px 5px;
-  color: #a6a6a6;
+  height: 4rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 0.1rem;
+  margin-top: .1rem;
   cursor: pointer;
+  border-radius: .5rem;
 }
-.pass:hover{
-  text-decoration: underline;
+.video-playlist .video .play-videoactive:hover, .video-playlist .video .play-video:hover{
+  background-color: #0003;
 }
-input[type="submit"]{
+
+.video-playlist .video .play-videoactive{
+  background-color: #0003;
+  color: chartreuse;
+}
+.main-video iframe{
   width: 100%;
-  height: 50px;
-  border: 1px solid;
-  background: #000000;
-  border-radius: 25px;
-  font-size: 18px;
-  color: #fff;
-  font-weight: 700;
-  cursor: pointer;
-  outline: none;
+  height: 50rem;
 }
-input[type="submit"]:hover{
-  border-color: chartreuse;
-  transition: .5s;
+.video-playlist h3{
+  font-size: 20px;
 }
-.signup_link{
-  margin: 30px 0;
-  text-align: center;
-  font-size: 16px;
-  color: #666666;
+.play-video img, .play-videoactive img{
+  width: 1.5rem;
+  height: 1.5rem;
 }
-.signup_link a{
-  color: #2691d9;
+.play-video a{
   text-decoration: none;
+  color: #fff;
 }
-.signup_link a:hover{
-  text-decoration: underline;
+.play-videoactive a{
+  text-decoration: none;
+  color: chartreuse;
 }
+
