--- a/ComputerWebsite/style.css
+++ b/ComputerWebsite/style.css
@@ -93,3 +93,47 @@ p{
     padding-left: 25px;
     padding-right: 25px;
 }
+.col-4{
+    flex-basis: 25%;
+    padding: 10px;
+    min-width: 200px;
+    margin-bottom: 50px;
+    transition: transform 0.5;
+}
+.col-4 img{
+    width: 100%;
+}
+
+.title{
+    text-align: center;
+    margin: 0 auto 80px;
+    position: relative;
+    line-height: 60px;
+    color: black;
+}
+.title::after{
+    content: '';
+    background: #000000;
+    width: 80px;
+    height: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+h4{
+    color: #555;
+    font-weight: normal;
+}
+.col-4 p{
+    font-size: 15px;
+}
+.rating .fa{
+    color: #f70606;
+}
+.col-4:hover{
+    transform: translateY(-5px);
+}
+ 
