login sign up done but not working hmmmm

--- a/tongol-a/university/style.css
+++ b/tongol-a/university/style.css
@@ -700,3 +700,13 @@
 .form-container form p a{
     color: #771515;
 }
+
+.form-container form .error-msg{
+    margin: 10px 0;
+    display: block;
+    background: crimson;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 10px;
+}
