Added Featured Section

--- a/ardales-c-PixelArtGallery/style.css
+++ b/ardales-c-PixelArtGallery/style.css
@@ -26,7 +26,8 @@
     --card-border-radius-5: 5rem;
 }
 
-/* ==========================================================
+/* 
+=============================================================
 GENERAL
 =============================================================
 */
@@ -44,7 +45,7 @@ GENERAL
 body {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
-    color: var(--color-gray-900);
+    color: var(--color-gray-200);
     overflow-x: hidden;
     background: var(--color-bg);
     font-size: 0.9rem;
@@ -97,7 +98,8 @@ img {
     object-fit: cover;
 }
 
-/* ==========================================================
+/* 
+=============================================================
 NAV
 =============================================================
 */
@@ -175,4 +177,25 @@ nav button {
 .nav__profile ul li:last-child a {
     background: var(--color-red);
     color: var(--color-bg);
+}
+
+/* 
+=============================================================
+FEATURED
+=============================================================
+*/
+
+.category__button {
+    background: var(--color-primary-light);
+    color: var(--color-primary);
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    border-radius: var(--card-border-radius-2);
+    font-weight: 600;
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+.category__button:hover {
+    color: var(--color-white);
 }
