--- a/policarpio-ag-blog/style.css
+++ b/policarpio-ag-blog/style.css
@@ -62,22 +62,21 @@ header{
     position: fixed;
     top:0; left:0; right:0;
     z-index: 1000;
-    background:#000000;
+    background:#fff;
     padding:2rem 9%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
 
 header .logo{
-    font-size: 2.5rem;
-    color:var(--white);
+    font-size: 3rem;
+    color:var(--black);
 }
 
 header .navbar a{
-    font-size: 1.7rem;
-    color:var(--white);
+    font-size: 2rem;
+    color:var(--black);
     margin:0 1rem;
 }
 
